python/Django/error
django_celery_worker
Waiting for PostgreSQL...


db:5432 - accepting connections


PostgreSQL is ready!


AUTO_MIGRATE is disabled; skipping migrations.


Collecting static files...


Traceback (most recent call last):


File "/app/manage.py", line 22, in <module>


main()


File "/app/manage.py", line 18, in main


execute_from_command_line(sys.argv)


File "/usr/local/lib/python3.12/site-packages/django/core/management/__init__.py", line 442, in execute_from_command_line


utility.execute()


File "/usr/local/lib/python3.12/site-packages/django/core/management/__init__.py", line 416, in execute


django.setup()


File "/usr/local/lib/python3.12/site-packages/django/__init__.py", line 24, in setup


apps.populate(settings.INSTALLED_APPS)


File "/usr/local/lib/python3.12/site-packages/django/apps/registry.py", line 91, in populate


app_config = AppConfig.create(entry)


^^^^^^^^^^^^^^^^^^^^^^^


File "/usr/local/lib/python3.12/site-packages/django/apps/config.py", line 123, in create


mod = import_module(mod_path)


^^^^^^^^^^^^^^^^^^^^^^^


File "/usr/local/lib/python3.12/importlib/__init__.py", line 90, in import_module


return _bootstrap._gcd_import(name[level:], package, level)


^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


File "<frozen importlib._bootstrap>", line 1387, in _gcd_import


File "<frozen importlib._bootstrap>", line 1360, in _find_and_load


File "<frozen importlib._bootstrap>", line 1331, in _find_and_load_unlocked


File "<frozen importlib._bootstrap>", line 935, in _load_unlocked


File "<frozen importlib._bootstrap_external>", line 995, in exec_module


File "<frozen importlib._bootstrap_external>", line 1133, in get_code


File "<frozen importlib._bootstrap_external>", line 1063, in source_to_code


File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed


File "/app/apps/users/apps.py", line 1


from django.apps import AppConfig"""Users app configuration."""


^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


SyntaxError: invalid syntax


Starting server...


ERROR 2025-10-27 17:19:46,311 signal Signal handler <bound method DjangoFixup.on_import_modules of <celery.fixups.django.DjangoFixup object at 0xffffb8659640>> raised: SyntaxError('invalid syntax', ('/app/apps/users/apps.py', 1, 34, 'from django.apps import AppConfig"""Users app configuration."""\n', 1, 64))


Traceback (most recent call last):


File "/usr/local/lib/python3.12/site-packages/celery/utils/dispatch/signal.py", line 280, in send


response = receiver(signal=self, sender=sender, **named)


^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


File "/usr/local/lib/python3.12/site-packages/celery/fixups/django.py", line 101, in on_import_modules


self.worker_fixup.validate_models()


File "/usr/local/lib/python3.12/site-packages/celery/fixups/django.py", line 139, in validate_models


self.django_setup()


File "/usr/local/lib/python3.12/site-packages/celery/fixups/django.py", line 135, in django_setup


django.setup()


File "/usr/local/lib/python3.12/site-packages/django/__init__.py", line 24, in setup


apps.populate(settings.INSTALLED_APPS)


File "/usr/local/lib/python3.12/site-packages/django/apps/registry.py", line 91, in populate


app_config = AppConfig.create(entry)


django_celery_beat
Waiting for PostgreSQL...


db:5432 - accepting connections


PostgreSQL is ready!


AUTO_MIGRATE is disabled; skipping migrations.


Collecting static files...


Traceback (most recent call last):


File "/app/manage.py", line 22, in <module>


main()


File "/app/manage.py", line 18, in main


execute_from_command_line(sys.argv)


File "/usr/local/lib/python3.12/site-packages/django/core/management/__init__.py", line 442, in execute_from_command_line


utility.execute()


File "/usr/local/lib/python3.12/site-packages/django/core/management/__init__.py", line 416, in execute


django.setup()


File "/usr/local/lib/python3.12/site-packages/django/__init__.py", line 24, in setup


apps.populate(settings.INSTALLED_APPS)


File "/usr/local/lib/python3.12/site-packages/django/apps/registry.py", line 91, in populate


app_config = AppConfig.create(entry)


^^^^^^^^^^^^^^^^^^^^^^^


File "/usr/local/lib/python3.12/site-packages/django/apps/config.py", line 123, in create


mod = import_module(mod_path)


^^^^^^^^^^^^^^^^^^^^^^^


File "/usr/local/lib/python3.12/importlib/__init__.py", line 90, in import_module


return _bootstrap._gcd_import(name[level:], package, level)


^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


File "<frozen importlib._bootstrap>", line 1387, in _gcd_import


File "<frozen importlib._bootstrap>", line 1360, in _find_and_load


File "<frozen importlib._bootstrap>", line 1331, in _find_and_load_unlocked


File "<frozen importlib._bootstrap>", line 935, in _load_unlocked


File "<frozen importlib._bootstrap_external>", line 995, in exec_module


File "<frozen importlib._bootstrap_external>", line 1133, in get_code


File "<frozen importlib._bootstrap_external>", line 1063, in source_to_code


File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed


File "/app/apps/users/apps.py", line 1


from django.apps import AppConfig"""Users app configuration."""


^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


SyntaxError: invalid syntax


Starting server...


celery beat v5.5.3 (immunity) is starting.


ERROR 2025-10-27 17:19:46,337 signal Signal handler <bound method DjangoFixup.on_import_modules of <celery.fixups.django.DjangoFixup object at 0xffffa375f680>> raised: SyntaxError('invalid syntax', ('/app/apps/users/apps.py', 1, 34, 'from django.apps import AppConfig"""Users app configuration."""\n', 1, 64))


Traceback (most recent call last):


File "/usr/local/lib/python3.12/site-packages/celery/utils/dispatch/signal.py", line 280, in send


response = receiver(signal=self, sender=sender, **named)


^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


File "/usr/local/lib/python3.12/site-packages/celery/fixups/django.py", line 101, in on_import_modules


self.worker_fixup.validate_models()


File "/usr/local/lib/python3.12/site-packages/celery/fixups/django.py", line 139, in validate_models


self.django_setup()


File "/usr/local/lib/python3.12/site-packages/celery/fixups/django.py", line 135, in django_setup


django.setup()


File "/usr/local/lib/python3.12/site-packages/django/__init__.py", line 24, in setup


apps.populate(settings.INSTALLED_APPS)


File "/usr/local/lib/python3.12/site-packages/django/apps/registry.py", line 91, in populate